fix layout on smaller devices

--- a/trillo/css/main.css
+++ b/trillo/css/main.css
@@ -105,6 +105,18 @@ button {
           justify-content: center;
 }
 
+@media only screen and (max-width: 31.25rem) {
+  .search {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    padding: 1.5rem 0;
+  }
+}
+
 .search__input {
   font-family: inherit;
   font-size: inherit;
@@ -116,6 +128,12 @@ button {
   margin-right: -3rem;
   -webkit-transition: all .3s;
   transition: all .3s;
+}
+
+@media only screen and (max-width: 31.25rem) {
+  .search__input {
+    width: 85%;
+  }
 }
 
 .search__input::-webkit-input-placeholder {
@@ -144,6 +162,12 @@ button {
   background-color: var(--color-grey-light-3);
 }
 
+@media only screen and (max-width: 31.25rem) {
+  .search__input:focus {
+    width: 90%;
+  }
+}
+
 .search__btn {
   border: none;
   background-color: transparent;
@@ -169,7 +193,6 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
   -ms-flex-item-align: stretch;
       align-self: stretch;
   -webkit-box-align: stretch;
@@ -278,6 +301,9 @@ button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
     padding: 0;
   }
 }
@@ -350,6 +376,7 @@ button {
   text-transform: uppercase;
   text-align: left;
   z-index: 3;
+  text-align: center;
 }
 
 @media only screen and (max-width: 56.25rem) {
@@ -401,6 +428,13 @@ button {
   padding: 1.5rem 3rem;
 }
 
+@media only screen and (max-width: 36.5rem) {
+  .overview__heading {
+    font-size: 1.8rem;
+    padding: 1rem 2rem;
+  }
+}
+
 .overview__stars {
   margin-right: auto;
   display: -webkit-box;
@@ -409,12 +443,6 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.overview__stars-icon {
-  height: 1.7rem;
-  width: 1.7rem;
-  fill: var(--color-primary-main);
 }
 
 .overview__location {
@@ -426,10 +454,23 @@ button {
           align-items: center;
 }
 
-.overview__location-icon {
+@media only screen and (max-width: 36.5rem) {
+  .overview__location-text {
+    font-size: 1.2rem;
+  }
+}
+
+.overview__stars-icon, .overview__location-icon {
   height: 1.7rem;
   width: 1.7rem;
   fill: var(--color-primary-main);
+}
+
+@media only screen and (max-width: 36.5rem) {
+  .overview__stars-icon, .overview__location-icon {
+    height: 1.3rem;
+    width: 1.3rem;
+  }
 }
 
 .overview__rating {
@@ -457,10 +498,22 @@ button {
   font-size: 2.5rem;
 }
 
+@media only screen and (max-width: 36.5rem) {
+  .overview__rating-average {
+    font-size: 1.8rem;
+  }
+}
+
 .overview__rating-count {
   text-transform: uppercase;
   font-weight: 700;
   font-size: .8rem;
+}
+
+@media only screen and (max-width: 36.5rem) {
+  .overview__rating-count {
+    font-size: .5rem;
+  }
 }
 
 .infinite-zoom-btn {
@@ -727,9 +780,22 @@ button {
   text-transform: uppercase;
 }
 
+@media only screen and (max-width: 36.5rem) {
+  .cta {
+    padding: 1.5rem;
+  }
+}
+
 .cta__text {
   font-size: 2.5rem;
   margin-bottom: 2.5rem;
+}
+
+@media only screen and (max-width: 36.5rem) {
+  .cta__text {
+    font-size: 1.8rem;
+    margin-bottom: 1.8rem;
+  }
 }
 
 .cta__btn {
@@ -747,6 +813,12 @@ button {
   transition: all .3s;
 }
 
+@media only screen and (max-width: 36.5rem) {
+  .cta__btn {
+    font-size: 1.3rem;
+  }
+}
+
 .cta__btn > * {
   display: inline-block;
   -webkit-transition: .3s all;
@@ -755,6 +827,12 @@ button {
 
 .cta__btn .btn-visible {
   padding: 2rem 6.5rem;
+}
+
+@media only screen and (max-width: 36.5rem) {
+  .cta__btn .btn-visible {
+    padding: 1.3rem 5.4rem;
+  }
 }
 
 .cta__btn .btn-invisible {
@@ -810,16 +888,22 @@ button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media only screen and (max-width: 31.25rem) {
+  .header {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: auto;
+    -ms-flex-line-pack: distribute;
+        align-content: space-around;
+  }
 }
 
 .content {
@@ -873,6 +957,15 @@ button {
   }
 }
 
+@media only screen and (max-width: 36.5rem) {
+  .details {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .details .description {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 60%;
@@ -890,6 +983,13 @@ button {
   .details .description {
     padding: 1rem;
     margin-right: 1rem;
+  }
+}
+
+@media only screen and (max-width: 36.5rem) {
+  .details .description {
+    padding: 1.5rem;
+    margin: 1rem;
   }
 }
 
