--- a/trillo/sass/_base.scss
+++ b/trillo/sass/_base.scss
@@ -1,6 +1,8 @@
 $bp-largest: 75rem;
 $bp-large: 68.75rem;
 $bp-medium: 56.25rem;
+$bp-small: 36.5rem;
+$bp-smaller: 31.25rem;
 
 :root {
   --color-primary-main: #eb2f64;
